Update Variance Estimate

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -12,37 +12,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/oldrain123/miniconda3/envs/c2st/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## Run experiments \n",
-    "## https://github.com/antoninschrab/mmdagg-paper/blob/master/experiments.py\n",
-    "\n",
-    "import numpy as np\n",
-    "import itertools \n",
-    "import pandas as pd \n",
-    "import torch\n",
-    "from util import completeMMDVar, compute_mmd_sq, compute_K_matrices"
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "import jax.random as random\n",
+    "from jax.random import multivariate_normal\n",
+    "from util import MMDVar, compute_mmd_sq, compute_K_matrices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sigma0 = 1"
+    "import os\n",
+    "\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"4\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sampler_normal(key, N1, N2, d):\n",
+    "    key, subkey = random.split(key)\n",
+    "    subkeys = random.split(subkey, num=2)\n",
+    "    X = jax.random.multivariate_normal(subkeys[0], jnp.zeros((d, )), jnp.eye(d), shape=(N1,)) \n",
+    "    Y = jax.random.multivariate_normal(subkeys[1], 1.1 * jnp.zeros((d, )), jnp.eye(d), shape=(N2,)) \n",
+    "    return X, Y"
    ]
   },
   {
@@ -54,93 +57,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data 1 Shape: (1000, 5)\n",
-      "Data 2 Shape: (1000, 5)\n",
-      "Estimated Variance of MMD: 1.2265769314639631e-07\n"
+      "Estimated Variance of MMD: 8.540801317976095e-05\n",
+      "Full Variance Estimate: 0.005245646583268721\n",
+      "Incomplete Variance Estimate: 0.005034097172184765\n"
      ]
     }
    ],
    "source": [
-    "import jax.numpy as jnp\n",
-    "from jax import random\n",
+    "# Experiment 1\n",
     "\n",
-    "def mvn_sample(key, mean, cov, size):\n",
-    "    \"\"\"Generate samples from a multivariate normal distribution.\"\"\"\n",
-    "    n = mean.shape[0]\n",
-    "    chol = jnp.linalg.cholesky(cov)\n",
-    "    normal_samples = random.normal(key, (size, n))\n",
-    "    return mean + jnp.dot(normal_samples, chol.T)\n",
-    "\n",
-    "key = random.PRNGKey(0)\n",
-    "\n",
-    "# First dataset: 5D multivariate normal with no correlation\n",
-    "mean1 = jnp.zeros(5)\n",
-    "cov1 = jnp.eye(5)\n",
-    "\n",
-    "# Second dataset: Multivariate normal where the last two dimensions have a correlation of 0.8\n",
-    "mean2 = jnp.zeros(5)\n",
-    "cov2 = jnp.eye(5)\n",
-    "cov2_values = jnp.array(cov2)\n",
-    "cov2_values = cov2_values.at[3, 4].set(0.8)\n",
-    "cov2_values = cov2_values.at[4, 3].set(0.8)\n",
-    "cov2 = cov2_values\n",
-    "\n",
-    "# Sample data\n",
-    "X = mvn_sample(key, mean1, cov1, 1000)\n",
-    "Y = mvn_sample(key, mean2, cov2, 1000)\n",
-    "\n",
-    "print(\"Data 1 Shape:\", X.shape)\n",
-    "print(\"Data 2 Shape:\", Y.shape)\n",
-    "\n",
+    "# Number of times to estimate MMD\n",
     "num_samples = 10000\n",
-    "mmd_samples_list = []\n",
     "\n",
+    "# Array to store MMD values\n",
+    "mmd_samples = jnp.zeros(num_samples)\n",
+    "sigma0 = 1\n",
+    "\n",
+    "# Monte Carlo simulation to estimate MMD values\n",
     "for i in range(num_samples):\n",
     "    key, subkey1, subkey2 = random.split(key, 3)\n",
-    "    \n",
-    "    # Sample new data\n",
-    "    X = mvn_sample(subkey1, mean1, cov1, 200)\n",
-    "    Y = mvn_sample(subkey2, mean2, cov2, 10)\n",
-    "    \n",
-    "    # Note: You'll have to translate `compute_K_matrices` and `compute_mmd_sq` to use JAX as well\n",
+    "    X, Y = sampler_normal(subkey1, N1= 200, N2=10, d=5)\n",
     "    Kxx, Kyy, Kxy = compute_K_matrices(X, Y, sigma0)\n",
-    "    mmd_value = compute_mmd_sq(Kxx, Kyy, Kxy, len(X), len(Y))\n",
-    "    \n",
-    "    mmd_samples_list.append(mmd_value ** 2)\n",
+    "    mmd_value = compute_mmd_sq(Kxx, Kyy, Kxy, 200, 10)\n",
+    "    mmd_samples = mmd_samples.at[i].set(mmd_value)\n",
     "\n",
-    "mmd_samples = jnp.array(mmd_samples_list)\n",
+    "# Compute estimated variance of MMD\n",
+    "mmd_variance = jnp.var(mmd_samples, ddof=1)\n",
     "\n",
-    "# Calculate the variance\n",
-    "mmd_variance = jnp.var(mmd_samples, ddof=1)  # ddof=1 for unbiased variance\n",
-    "print(\"Estimated Variance of MMD:\", mmd_variance)"
+    "print(\"Estimated Variance of MMD:\", mmd_variance)\n",
+    "\n",
+    "# Compare the results\n",
+    "print(f\"Full Variance Estimate: {MMDVar(X, Y, sigma0)}\")\n",
+    "print(f\"Incomplete Variance Estimate: {MMDVar(X, Y, sigma0, complete=False)}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array(0.004493, dtype=float64)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "completeMMDVar(X, Y, sigma0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Experiment 2\n",
+    "\n",
+    "# Seed setting (for reproducible results)\n",
+    "key = random.PRNGKey(0)\n",
+    "\n",
+    "# First dataset\n",
+    "mean1 = jnp.zeros(5)\n",
+    "cov1 = jnp.eye(5)\n",
+    "\n",
+    "# Second dataset\n",
+    "mean2 = jnp.zeros(5)\n",
+    "cov2 = jnp.eye(5)\n",
+    "cov2 = cov2.at[3, 4].set(0.3)\n",
+    "cov2 = cov2.at[4, 3].set(0.5)\n",
+    "\n",
+    "# Function to generate samples from multivariate normal distribution\n",
+    "def sample_mvn(key, mean, cov, num_samples):\n",
+    "    return multivariate_normal(mean=mean, cov=cov, shape=num_samples, key=key)\n",
+    "\n",
+    "# Number of times to estimate MMD\n",
+    "num_samples = 10000\n",
+    "\n",
+    "# Array to store MMD values\n",
+    "mmd_samples = jnp.zeros(num_samples)\n",
+    "sigma0 = 1\n",
+    "\n",
+    "# Monte Carlo simulation to estimate MMD values\n",
+    "for i in range(num_samples):\n",
+    "    key, subkey1, subkey2 = random.split(key, 3)\n",
+    "    X = sample_mvn(subkey1, mean1, cov1, (200,))\n",
+    "    Y = sample_mvn(subkey2, mean2, cov2, (10,))\n",
+    "\n",
+    "    Kxx, Kyy, Kxy = compute_K_matrices(X, Y, sigma0)\n",
+    "    mmd_value = compute_mmd_sq(Kxx, Kyy, Kxy, len(X), len(Y))\n",
+    "\n",
+    "    mmd_samples = mmd_samples.at[i].set(mmd_value)\n",
+    "\n",
+    "# Compute estimated variance of MMD\n",
+    "mmd_variance = jnp.var(mmd_samples, ddof=1)\n",
+    "\n",
+    "print(\"Estimated Variance of MMD:\", mmd_variance)\n",
+    "\n",
+    "# Compare the results\n",
+    "print(f\"Full Variance Estimate: {MMDVar(X, Y, sigma0)}\")\n",
+    "print(f\"Incomplete Variance Estimate: {MMDVar(X, Y, sigma0, complete=False)}\")"
+   ]
   }
  ],
  "metadata": {
