--- a/C2ST/tetst.ipynb
+++ b/C2ST/tetst.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
     "cuda = True if torch.cuda.is_available() else False\n",
     "N_per = 100 # permutation times\n",
     "alpha = 0.05 # test threshold\n",
-    "N1 = n # number of samples in one set\n",
+    "N1 = 2021 # number of samples in one set\n",
     "K = 10 # number of trails\n",
     "J = 1 # number of test locations\n",
     "N = 100 # number of test sets\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -222,82 +222,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Repeat experiments K times (K = 10) and report average test power (rejection rate)\n",
-    "for kk in tqdm(range(K)):\n",
-    "    torch.manual_seed(kk * 19 + N1)\n",
-    "    torch.cuda.manual_seed(kk * 19 + N1)\n",
-    "    np.random.seed(seed=1102 * (kk + 10) + N1)\n",
-    "    \n",
-    "    # Initialize parameters\n",
-    "\n",
-    "    # Collect CIFAR10 images\n",
-    "    Ind_tr = np.random.choice(len(data_all), len(data_all), replace=False)\n",
-    "    Ind_te = Ind_tr\n",
-    "    train_data = []\n",
-    "    for i in Ind_tr:\n",
-    "       train_data.append([data_all[i], label_all[i]])\n",
-    "\n",
-    "    dataloader = torch.utils.data.DataLoader(\n",
-    "        train_data,\n",
-    "        batch_size=batch_size,\n",
-    "        shuffle=True,\n",
-    "    )\n",
-    "\n",
-    "    # Collect CIFAR10.1 images\n",
-    "    np.random.seed(seed=819 * (kk + 9) + N1)\n",
-    "    Ind_tr_v4 = np.random.choice(len(data_T), len(data_T), replace=False)\n",
-    "    Ind_te_v4 = Ind_tr_v4\n",
-    "    New_CIFAR_tr = data_trans[Ind_tr_v4]\n",
-    "    New_CIFAR_te = data_trans[Ind_te_v4]\n",
-    "\n",
-    "    # Initialize optimizers\n",
-    "    optimizer_F = torch.optim.Adam(list(simclr_model.model.parameters()), lr=lr)\n",
-    "    Tensor = torch.cuda.FloatTensor if cuda else torch.FloatTensor\n",
-    "\n",
-    "    # ----------------------------------------------------------------------------------------------------\n",
-    "    #  Training deep networks for MMD-D (called simclr_model)\n",
-    "    # ----------------------------------------------------------------------------------------------------\n",
-    "    np.random.seed(seed=1102)\n",
-    "    torch.manual_seed(1102)\n",
-    "    torch.cuda.manual_seed(1102)\n",
-    "    for epoch in tqdm(range(n_epochs)):\n",
-    "        for i, (imgs, _) in enumerate(dataloader):\n",
-    "            if True:\n",
-    "                ind = np.random.choice(N1, imgs.shape[0], replace=False)\n",
-    "                Fake_imgs = New_CIFAR_tr[ind]\n",
-    "                # Adversarial ground truths\n",
-    "                valid = Variable(Tensor(imgs.shape[0], 1).fill_(1.0), requires_grad=False)\n",
-    "                fake = Variable(Tensor(imgs.shape[0], 1).fill_(0.0), requires_grad=False)\n",
-    "\n",
-    "                # Configure input\n",
-    "                real_imgs = Variable(imgs.type(Tensor))\n",
-    "                Fake_imgs = Variable(Fake_imgs.type(Tensor))\n",
-    "                X = torch.cat([real_imgs, Fake_imgs], 0)\n",
-    "                Y = torch.cat([valid, fake], 0).squeeze().long()\n",
-    "\n",
-    "                # ------------------------------\n",
-    "                #  Train deep network for MMD-D\n",
-    "                # ------------------------------\n",
-    "                # Initialize optimizer\n",
-    "                optimizer_F.zero_grad()\n",
-    "                # Compute output of deep network\n",
-    "                modelu_output = simclr_model.model(X)\n",
-    "                print(modelu_output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2212ce51ac6b4ac3b733b48bd15442a2",
+       "model_id": "2935be0a0e994deba6b5f3dae12ddc89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -311,7 +242,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e3a6408880c4373a47187156c2f9da2",
+       "model_id": "b363974e99074f8e963e074f83f1dafc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -323,27 +254,20 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:jax._src.xla_bridge:CUDA backend failed to initialize: Found CUDA version 12010, but JAX was built against version 12020, which is newer. The copy of CUDA that is installed must be at least as new as the version against which JAX was built. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " MMD-DK: 5 MMD:  -7.303032134586829e-08DK Reject rate_u:  0.05\n",
+      " MMD-DK: 90 MMD:  0.002641599625349045DK Reject rate_u:  0.9\n",
       "Test Power of DK (10 times): \n",
-      "[[0.05 0.   0.   0.   0.   0.   0.   0.   0.   0.  ]]\n",
+      "[[0.9 0.  0.  0.  0.  0.  0.  0.  0.  0. ]]\n",
       "Average Test Power of DK (10 times): \n",
-      "MMD-D:  0.05\n"
+      "MMD-D:  0.9\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3d1457c31254a2b84ba0a8c8dd6bfc8",
+       "model_id": "d7e39f8699a442f98fc30d987ddec58e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -358,7 +282,211 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " MMD-DK: 0 MMD:  3.837164399556059e-0797"
+      " MMD-DK: 100 MMD:  0.004986409097909927DK Reject rate_u:  1.0\n",
+      "Test Power of DK (10 times): \n",
+      "[[0.9 1.  0.  0.  0.  0.  0.  0.  0.  0. ]]\n",
+      "Average Test Power of DK (10 times): \n",
+      "MMD-D:  0.95\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2c68a190ac984d12b0ef5c5c2ca3eedf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " MMD-DK: 100 MMD:  0.00414123572409153DK Reject rate_u:  1.0\n",
+      "Test Power of DK (10 times): \n",
+      "[[0.9 1.  1.  0.  0.  0.  0.  0.  0.  0. ]]\n",
+      "Average Test Power of DK (10 times): \n",
+      "MMD-D:  0.9666666666666667\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a592b8b0571b4421aff9cb2ec53d2e60",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " MMD-DK: 100 MMD:  0.005306379869580269DK Reject rate_u:  1.0\n",
+      "Test Power of DK (10 times): \n",
+      "[[0.9 1.  1.  1.  0.  0.  0.  0.  0.  0. ]]\n",
+      "Average Test Power of DK (10 times): \n",
+      "MMD-D:  0.975\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd71175493a44873b3d0f5a6997c5e55",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " MMD-DK: 100 MMD:  0.00449812225997448DK Reject rate_u:  1.0\n",
+      "Test Power of DK (10 times): \n",
+      "[[0.9 1.  1.  1.  1.  0.  0.  0.  0.  0. ]]\n",
+      "Average Test Power of DK (10 times): \n",
+      "MMD-D:  0.9800000000000001\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "60072d3e203b4677aa36193ee03d2a8b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " MMD-DK: 100 MMD:  0.004210645332932472DK Reject rate_u:  1.0\n",
+      "Test Power of DK (10 times): \n",
+      "[[0.9 1.  1.  1.  1.  1.  0.  0.  0.  0. ]]\n",
+      "Average Test Power of DK (10 times): \n",
+      "MMD-D:  0.9833333333333334\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1907056ac6df4c34ba254ff10b1994eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " MMD-DK: 100 MMD:  0.006573684513568878DK Reject rate_u:  1.0\n",
+      "Test Power of DK (10 times): \n",
+      "[[0.9 1.  1.  1.  1.  1.  1.  0.  0.  0. ]]\n",
+      "Average Test Power of DK (10 times): \n",
+      "MMD-D:  0.9857142857142858\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f0d16f6853804d1f842a0e8c7a518aa1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " MMD-DK: 100 MMD:  0.006301615387201309DK Reject rate_u:  1.0\n",
+      "Test Power of DK (10 times): \n",
+      "[[0.9 1.  1.  1.  1.  1.  1.  1.  0.  0. ]]\n",
+      "Average Test Power of DK (10 times): \n",
+      "MMD-D:  0.9875\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a60378b14c947aaad04659491fd1c91",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " MMD-DK: 100 MMD:  0.0058646369725465775DK Reject rate_u:  1.0\n",
+      "Test Power of DK (10 times): \n",
+      "[[0.9 1.  1.  1.  1.  1.  1.  1.  1.  0. ]]\n",
+      "Average Test Power of DK (10 times): \n",
+      "MMD-D:  0.9888888888888889\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b2753a4473134365b808a94cc1cf019d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " MMD-DK: 100 MMD:  0.004320599138736725DK Reject rate_u:  1.0\n",
+      "Test Power of DK (10 times): \n",
+      "[[0.9 1.  1.  1.  1.  1.  1.  1.  1.  1. ]]\n",
+      "Average Test Power of DK (10 times): \n",
+      "MMD-D:  0.99\n"
      ]
     }
    ],
@@ -369,9 +497,6 @@
     "    torch.cuda.manual_seed(kk * 19 + N1)\n",
     "    np.random.seed(seed=1102 * (kk + 10) + N1)\n",
     "    \n",
-    "    # Initialize deep networks for MMD-D (called simclr_model)\n",
-    "    # simclr_model = simclr_model()\n",
-    "    \n",
     "    # Initialize parameters\n",
     "    epsilonOPT = torch.log(MatConvert(np.random.rand(1) * 10 ** (-10), device, dtype))\n",
     "    epsilonOPT.requires_grad = True\n",
@@ -381,7 +506,8 @@
     "    sigma0OPT.requires_grad = True\n",
     "\n",
     "    # Collect CIFAR10 images\n",
-    "    Ind_tr = np.random.choice(len(data_all), len(data_all), replace=False)\n",
+    "    Ind_tr = np.random.choice(len(data_all), len(data_T), replace=False)\n",
+    "    # print('ind_tr: ', len(Ind_tr))\n",
     "    Ind_te = Ind_tr\n",
     "    train_data = []\n",
     "    for i in Ind_tr:\n",
@@ -416,8 +542,12 @@
     "    # Fetch training data\n",
     "    s1 = data_all[Ind_tr]\n",
     "    s2 = data_trans[Ind_tr_v4]\n",
+    "\n",
+    "    # print(\"s1: \", s1.shape)\n",
+    "    # print(\"s2: \", s2.shape)\n",
     "    S = torch.cat([s1.cpu(), s2.cpu()], 0).cuda()\n",
-    "    Sv = S.view(2 * N1, -1)\n",
+    "    # print(S.shape)\n",
+    "    Sv = S.view(S.size(0), -1)\n",
     "    # Run two-sample test (MMD-D) on the training set\n",
     "    # dk_h_u, dk_threshold_u, dk_mmd_value_u = TST_MMD_u(featurizer(S), N_per, N1, Sv, sigma, sigma0_u, ep, alpha, device, dtype, complete=False)\n",
     "    # com_h_u, com_threshold_u, com_mmd_value_u = TST_MMD_u(featurizer(S), N_per, N1, Sv, sigma, sigma0_u, ep, alpha, device, dtype, complete=True)\n",
@@ -437,12 +567,12 @@
     "        # Fetch test data\n",
     "        np.random.seed(seed=1102 * (k + 1) + N1)\n",
     "        data_all_te = data_all[Ind_te]\n",
-    "        N_te = len(data_trans)-N1\n",
+    "        N_te = len(data_all_te)\n",
     "        Ind_N_te = np.random.choice(len(Ind_te), N_te, replace=False)\n",
     "        s1 = data_all_te[Ind_N_te]\n",
     "        s2 = data_trans[Ind_te_v4]\n",
     "        S = torch.cat([s1.cpu(), s2.cpu()], 0).cuda()\n",
-    "        Sv = S.view(2 * N_te, -1)\n",
+    "        Sv = S.view(S.size(0), -1)\n",
     "        # MMD-D\n",
     "        dk_h_u, dk_threshold_u, dk_mmd_value_u = TST_MMD_u(simclr_model.model(S), N_per, N_te, Sv, sigmaOPT, sigma0OPT, epsilonOPT, alpha, device, dtype, complete=False)\n",
     "\n",
