[MMD]ComMMDVar experiment

--- a/MMD/experiments/ImbalancedMMD2.ipynb
+++ b/MMD/experiments/ImbalancedMMD2.ipynb
@@ -2,12 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys \n",
     "sys.path.append('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"5\""
    ]
   },
   {
@@ -38,29 +48,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os \n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"4\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "CUDA backend failed to initialize: Found cuPTI version 18, but JAX was built against version 20, which is newer. The copy of cuPTI that is installed must be at least as new as the version against which JAX was built. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpu\n"
+      "gpu\n"
      ]
     }
    ],
@@ -78,13 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25497308d4604a5cb8ddd800c380ee8e",
+       "model_id": "349dadb4ac1041bcad7aa4dc78a14e3e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fff327fef58f4f47b46bd185ee714469",
+       "model_id": "c933d9eb65404f82884b4eb6d11b215d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,12 +111,12 @@
     "# Your existing parameters\n",
     "repetitions = 200\n",
     "number_perturbations = 2\n",
-    "scales = [0, 0.1, 0.2, 0.3, 0.4, 0.5]\n",
-    "sample_sizes = [500, 1000, 1500, 2000, 2500, 3000]\n",
+    "scales = [0.3, 0.5]\n",
+    "sample_sizes = [5000, 10000]\n",
     "s_num = len(scales)\n",
     "ss_num = len(sample_sizes)\n",
     "d = 1\n",
-    "tests = (mmdfuse_test, mmd_median_test, mmdagg_test, mmdagginc_test)\n",
+    "tests = (mmdfuse_test, mmd_median_test, mmdagg_test)\n",
     "\n",
     "# Initializing the arrays\n",
     "outputs = jnp.zeros((len(tests), len(scales), len(sample_sizes), repetitions))\n",
@@ -134,7 +127,8 @@
     "# Running the tests\n",
     "for s, ss in tqdm(itertools.product(range(s_num), range(ss_num))):\n",
     "    m = sample_sizes[ss]\n",
-    "    n = sample_sizes[0]\n",
+    "    # n = sample_sizes[0]\n",
+    "    n = 500\n",
     "    scale = scales[s]\n",
     "    for i in tqdm(range(repetitions)):\n",
     "        key, subkey = random.split(key)\n",
