--- a/MMD/experiments/ImbalancedMMD.ipynb
+++ b/MMD/experiments/ImbalancedMMD.ipynb
@@ -16,6 +16,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os \n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"4\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sampler.sampler_perturbations import sampler_perturbations\n",
     "from all_tests import mmdfuse_test, mmd_median_test, mmdagg_test, mmdagginc_test\n",
     "\n",
@@ -38,22 +48,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os \n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"4\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpu\n"
+      "gpu\n"
      ]
     }
    ],
@@ -71,13 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25497308d4604a5cb8ddd800c380ee8e",
+       "model_id": "ba76b94ae64b454eb99b4c6bd51aa16f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fff327fef58f4f47b46bd185ee714469",
+       "model_id": "a43bd01ee599454b9077e811a37dc058",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,147 +105,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0431876a320745538de54e45e1441c0b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ca37fb5f07f4b8694446e52b62831b7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49c635efcfc44e3db56475176f5b9a92",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a271ad5e2cf84539a9f429a201d5c6e9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24107d34ffeb4669a529bd10eb94b967",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efc700e4b0e14b08b36b19faa8a9b6a5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0315c857d714d8d86a85b48eddc3d8e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7736c1fbd2af473f93c4ed31e5c64344",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49e132b2d61a434bb3287763606dc52f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ba9c64ee20d4ec49cbeed9efabeb84b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "976d0cd923d741b798cb09a6b4aef7c6",
+       "model_id": "fcfcfc5ea4884d50bb2501e0268c97ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,12 +125,12 @@
     "# Your existing parameters\n",
     "repetitions = 200\n",
     "number_perturbations = 2\n",
-    "scales = [0, 0.1, 0.2, 0.3, 0.4, 0.5]\n",
-    "sample_sizes = [500, 1000, 1500, 2000, 2500, 3000]\n",
+    "scales = [0.1, 0.3]\n",
+    "sample_sizes = [500, 5000]\n",
     "s_num = len(scales)\n",
     "ss_num = len(sample_sizes)\n",
     "d = 1\n",
-    "tests = (mmdfuse_test, mmd_median_test, mmdagg_test, mmdagginc_test)\n",
+    "tests = (mmdfuse_test, mmd_median_test, mmdagg_test)\n",
     "\n",
     "# Initializing the arrays\n",
     "outputs = jnp.zeros((len(tests), len(scales), len(sample_sizes), repetitions))\n",
@@ -298,7 +158,7 @@
     "    scale_sample_averages[s][ss] = jnp.mean(outputs[:, s, ss, :])\n",
     "\n",
     "# Saving and printing the results\n",
-    "jnp.save(\"../results/perturbations_vary_dif_mn_d1_averages.npy\", scale_sample_averages`wui`)\n",
+    "jnp.save(\"../results/perturbations_vary_dif_mn_d1_averages.npy\", scale_sample_averages)\n",
     "\n",
     "print(\"Averages by Scale and Sample Size\")\n",
     "print(\"Scales: \", scales)\n",
